--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,8 @@
 <% content_for :title do %>About<% end %>
 <h3>About the Website</h3>
 <p>
-This web application was created with
+This web application was generated with
 <%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
+from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>
+by Andrew Goncharenko.
 </p>
